--- a/src/diary.css
+++ b/src/diary.css
@@ -21,6 +21,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
+    color: yellowgreen;
 }
 
 .right-float {
@@ -30,3 +31,8 @@
 .space {
     margin-right: 0.2rem;
 }
+
+.editable-field {
+    border: 1px solid black;     
+    background-color: beige;     
+  }
