--- a/src/diary.css
+++ b/src/diary.css
@@ -1,7 +1,7 @@
-.main{
-    background-color: #282c34;  
+.main {
+    background-color: #282c34;
     min-height: 100vh;
-    align-items: center;  
+    align-items: center;
     color: white;
     display: flex;
     flex-direction: column;
@@ -10,10 +10,10 @@
 
 .diary-entries {
     max-width: 75%;
-    background-color: #282c34 ;
+    background-color: #282c34;
 }
 
-.black-ground {    
+.black-ground {
     background-color: #282c34 !important;
 }
 
@@ -24,8 +24,32 @@
     color: yellowgreen;
 }
 
+.star-toggle-button {
+    background-color: transparent !important;
+    border: none !important;
+    outline: none !important;
+    cursor: pointer !important;
+  }
+  
+  .star-toggle-button.selected {
+    color: yellowgreen;
+  }
+  
+  .star-toggle-button::before {
+    content: '☆';
+    color: #ccc; 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .star-toggle-button.selected::before {
+    content: '★';
+    color: yellowgreen;
+  }
 .right-float {
-    float: right;    
+    float: right;
 }
 
 .space {
@@ -33,6 +57,6 @@
 }
 
 .editable-field {
-    border: 1px solid black;     
-    background-color: beige;     
-  }
+    border: 1px solid black;
+    background-color: beige;
+}
